# pioplemidi-cli

./: AUTHORS  CMakeLists.txt  COMPILE.md  README.md
cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  libADLMIDI.pc  version_check.c
utils/midiplay/: CMakeLists.txt  pioplemidi-cli.cpp
